# KanColleTool

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Info.plist  KCClient.cpp  KCClient.h  KCGameWindow.cpp  KCGameWindow.h  KCHttpPacket.cpp  KCHttpPacket.h  KCHttpRequest.cpp  KCHttpRequest.h  KCMainWindow.cpp  KCMainWindow.h  KCMainWindow.ui  KCProxyServer.cpp  KCProxyServer.h  KCProxyThread.cpp  KCProxyThread.h  KanColleTool.pro  KanColleTool.sublime-project  LICENSE.txt  MCGameWindow.ui  Makefile  README.md  README.txt  build_source_debian.sh  build_source_tgz.sh  build_source_ubuntu.sh  default.xml  linbuild-deb.sh  linbuild-ppa-push.sh  linbuild-ppa.sh  linbuild.sh  macbuild.command  main.cpp  tagbump.sh  ui_KCMainWindow.h  update.bat  (+4 more)
gamedata/: battle.flr  bgset.flr  mainD2.flr  mainD2.swf  port.flr  title.flr  title.swf
macviewer/KCTViewer/: Podfile
macviewer/KCTViewer/KCTViewer/: KCTViewer-Info.plist  KCTViewer-Prefix.pch  KVAppDelegate.h  KVAppDelegate.m  KVAppDelegate.mm  KVCacheEntry.h  KVCacheEntry.m  KVCachingHTTPProtocol.h  KVCachingHTTPProtocol.m  KVHTTPProtocol.h  KVHTTPProtocol.m  KVHTTPProtocol.mm  KVJSUtils.h  KVJSUtils.m  KVTranslator.h  KVTranslator.m  NSString+KVHashes.h  NSString+KVHashes.m  NSURL+KVUtil.h  NSURL+KVUtil.m  NSURL+KVUtil.mm  main.m
macviewer/KCTViewer/KCTViewer.xcodeproj/: project.pbxproj
macviewer/KCTViewer/KCTViewer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macviewer/KCTViewer/KCTViewer.xcodeproj/project.xcworkspace/xcshareddata/: KCTViewer.xccheckout
macviewer/KCTViewer/KCTViewer.xcworkspace/: contents.xcworkspacedata
macviewer/KCTViewer/KCTViewer.xcworkspace/xcshareddata/: KCTViewer.xccheckout
macviewer/KCTViewer/KCTViewer/Base.lproj/: MainMenu.xib
macviewer/KCTViewer/KCTViewer/Images.xcassets/AppIcon.appiconset/: Contents.json
macviewer/KCTViewer/KCTViewerTests/: KCTViewerTests-Info.plist  KCTViewerTests.mm
targets/archlinux/: PKGBUILD
targets/archlinux/tool/: PKGBUILD
targets/archlinux/viewer/: PKGBUILD
targets/debian/: changelog  control  copyright  manpage.xml.ex  menu  rules
targets/debian/debian/: changelog  control  install  menu
targets/debian/debian/source/: include-binaries  options
targets/debian/kancolletool-viewer/debian/: changelog  control  install  manpage.1.ex  menu  rules
targets/debian/kancolletool-viewer/debian/kancolletool-viewer/usr/share/applications/: KCTViewer.desktop
targets/debian/kancolletool/debian/: changelog  control  manpage.1.ex  manpage.sgml.ex  menu.ex  rules  watch.ex
targets/debian/patches/: series
targets/gentoo/: kancolletool-0.9.3.ebuild  kancolletool-0.9.4.ebuild
targets/windows/: KanColleTool.iss
tldata/: README.md  kc_eng.json  maketrans.py  ship-tlbase.json  ship.json  slotitem-tlbase.json  slotitem.json
tool/: .travis.yml  Info.plist  KCClient.cpp  KCClient.h  KCClient_p.cpp  KCDefaults.h  KCDock.cpp  KCDock.h  KCFleet.cpp  KCFleet.h  KCGameObject.h  KCGameWindow.cpp  KCGameWindow.h  KCLogger.cpp  KCLogger.h  KCMacUtils.h  KCMainWindow.cpp  KCMainWindow.h  KCMainWindow.ui  KCMasterShip.cpp  KCMasterShip.h  KCPlayerShip.cpp  KCPlayerShip.h  KCProxyServer.cpp  KCSettingsDialog.cpp  KCSettingsDialog.h  KCSettingsDialog.ui  KCShip.cpp  KCShip.h  KCShipDetailsDialog.cpp  KCShipDetailsDialog.h  KCShipDetailsDialog.ui  KCShipMaster.cpp  KCShipMaster.h  KCShipType.cpp  KCShipType.h  KCToolServer.cpp  KCToolServer.h  KCTranslator.cpp  KCTranslator.h  (+13 more)
tool/cache/: fetchcache.sh
tool/cache/api_get_master/: ship.json  slotitem.json  useitem.json
tool/cache/api_get_member/: deck.json  kdock.json  ndock.json  ship.json
util/: api_port.js  chunkserver.py  chunkserver_data.txt  crc32.py
viewer/: KCTViewer.pri  KCTViewer.pro  KCTViewer.rc  KVDefaults.h  KVHttpPacket.cpp  KVHttpPacket.h  KVMainWindow.cpp  KVMainWindow.h  KVNetworkAccessManager.cpp  KVNetworkAccessManager.h  KVNetworkReply.cpp  KVNetworkReply.h  KVProxy.cpp  KVProxy.h  KVProxyServer.cpp  KVProxyServer.h  KVProxy_p.cpp  KVProxy_p.h  KVSettingsDialog.cpp  KVSettingsDialog.h  KVSettingsDialog.ui  KVTranslator.cpp  KVTranslator.h  KVUtil.cpp  KVUtil.h  Makefile  crc32.h  esc.js  gadgets.js  index.html  main.cpp  package.json  resources.qrc  test.js  version.h  winbuild.bat
viewer/resources/: KCTViewer.desktop  KVSettingsDialog.ui
viewer/src/: KCTViewer.pro  KVDefaults.h  KVMainWindow.cpp  KVNetworkAccessManager.cpp  KVNetworkAccessManager.h  KVSettingsDialog.cpp  KVTranslator.cpp  KVTranslator.h  KVTranslator_p.cpp  KVUtil.cpp  kancolletool-viewer  main.cpp  version.h
viewer/tests/: KCTViewerTest  TestKCTViewer.pro  TestKVTranslator.cpp  TestKVTranslator.moc
